[gd_scene load_steps=6 format=3 uid="uid://btklg36q26204"]

[ext_resource type="Script" path="res://main_stage.gd" id="1_87exq"]
[ext_resource type="PackedScene" uid="uid://en6soysreg5w" path="res://Actors/player.tscn" id="1_p234u"]
[ext_resource type="PackedScene" uid="uid://biy4d6islihah" path="res://Actors/Walls/gate_one.tscn" id="2_dnhjq"]
[ext_resource type="PackedScene" uid="uid://dujq22qpr31ln" path="res://Actors/Walls/hud.tscn" id="4_tia3d"]
[ext_resource type="PackedScene" uid="uid://5w8cdehp0x76" path="res://parallax_background.tscn" id="5_aucfg"]

[node name="MainStage" type="Node2D"]
script = ExtResource("1_87exq")
wall_scene = ExtResource("2_dnhjq")

[node name="PlayerRigid2D" parent="." instance=ExtResource("1_p234u")]
position = Vector2(267, 317)
motion_mode = 1

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(300, 324)

[node name="WallTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="WallSpawn" type="Marker2D" parent="."]
position = Vector2(1152, 324)

[node name="Walls" type="Node2D" parent="."]

[node name="HUD" parent="." instance=ExtResource("4_tia3d")]

[node name="ParallaxBackground" parent="." instance=ExtResource("5_aucfg")]

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.580392)
offset_right = 40.0
offset_bottom = 23.0
text = "Made with help from Nerdiful and the Godot Discord"

[connection signal="ScoreUp" from="PlayerRigid2D" to="." method="_on_player_rigid_2d_score_up"]
[connection signal="hit" from="PlayerRigid2D" to="." method="game_over"]
[connection signal="timeout" from="WallTimer" to="." method="_on_wall_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
